Bug 502681 Crash if I select all after opening a message in a new tab without changing the focus [@ nsMsgDBView::DoCommand(int)]. r/sr=bienvenu